@@ -32,7 +32,7 @@ dnl ==============================================================
 GETTEXT_PACKAGE=setup-tools-backends
 AC_SUBST(GETTEXT_PACKAGE)
 
-ALL_LINGUAS="ar az bg bn bs ca cs da de el en_CA en_GB es eu fi fr gu hr id it ja ko lt ms nb nl no pa pl pt pt_BR ro sk sq sr sr@Latn sv ta tr uk zh_CN zh_TW"
+ALL_LINGUAS="ar az bg bn bs ca cs da de el en_CA en_GB es eu fi fr gu hr id it ja ko lt ms nb nl no pa pl pt pt_BR ro sk sq sr sr@Latn sv ta th tr uk zh_CN zh_TW"
 AM_GLIB_GNU_GETTEXT
 
 AC_OUTPUT([
