@@ -1,3 +1,9 @@
+2005-02-12  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* general.pl.in: added stupid missing function in i18n initialization.
+	Fixes #167095
+	* xml.pl.in: cosmetic fix
+
 2005-02-08  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* Release 1.1.91
